fix: iphone bug z-index

--- a/christmasbang/style.css
+++ b/christmasbang/style.css
@@ -162,6 +162,7 @@ button {
   inset: 0;
   /* transform: translateZ(400px) scale(0.5); */
   transform: none;
+  z-index: 10;
 }
 
 section {
